--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -612,6 +612,44 @@ input, select, textarea {
 
 		}
 
+				/* Styles for video thumbnails */
+		#main .item.thumb.video {
+			display: block;
+			position: relative;
+			background: rgba(255, 255, 255, 0.25);
+			cursor: default;
+		}
+
+		#main .item.thumb.video h2 {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			background: rgba(18, 21, 29, 0.85);
+			width: 100%;
+			padding: 1em;
+			font-weight: 400;
+			line-height: 1em;
+			z-index: 2;
+		}
+
+		#main .item.thumb.video video {
+			display: block;
+			z-index: 1;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+			transition: opacity 0.75s ease-in-out;
+			transition-delay: 1.25s;
+		}
+
+		body.is-preload #main .item.thumb.video video {
+			opacity: 0;
+		}
+
 /* Header */
 
 	#footer {
