putting little designs

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -340,7 +340,7 @@
 			&.span-3 {
 				width: $width * 2;
 			}
-
+/*
 			&.intro {
 				background-color: #d64760;
 				background-image: url('images/overlay.png');
@@ -361,7 +361,7 @@
 					opacity: 0.65;
 				}
 			}
-
+*/
 			&.thumb {
 				display: block;
 				position: relative;
